sign up and Login page designed

--- a/StackOverflow.Solution.MVC/Views/Shared/_Layout.cshtml
+++ b/StackOverflow.Solution.MVC/Views/Shared/_Layout.cshtml
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - StackOverflow.Solution.MVC</title>
+    <title>@ViewData["Title"] - StackOverflow</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/StackOverflow.Solution.MVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">StackOverflow.Solution.MVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">StackOverflow</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,6 +25,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="loginbtn">
+                            <a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
+                        <li class="signupbtn">
+                            <a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="signup">sign up</a>
                         </li>
                     </ul>
                 </div>
